--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -40,6 +40,21 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
+    - lost chakram in tomb with charge attack and then teleporting across to the north door
+
+    - Add return to last save location to the fake nimbus cloud.
+    - Remove statue dialog from randomizer.
+    - Prevent pausing during transitions unless the suppress inventory flag is set.
+
+    - Fix music restarts and healthbar briefly shows when entering beetle boss screen.
+
+    - Randomize war temple switches using a special behavior.
+
+    - Remove version param from audio files, add version params to each file individually.
+
+    - Add full buildings to Summoner ruins in Spirit World.
+        - Populate with War God Alcolytes and the Progenitor Spirit
+
     - Add `getLogicalZone` function that returns a logical zone for a given state location wich can differ from the actual zone key, use this for randomizer locations and dungeon item associations.
         - Move underwater areas into the same logical zone so that keys can be shared above and below water
         - Split different caves into distinct logical zones like 'bushCave', 'fertilityTemple', and 'ascentCave'
@@ -78,6 +93,7 @@ Current tasks:
             - Could add special logic check against specific max spirit amounts to simplify this.
 
     - Mine cart mechanic with switchable tracks.
+        - Or maybe a pipe puzzle with lava flow in the forge. Maybe NPC asks for help fixing the pipes.
 
     - Dungeon with super tile that is just the vertical face of a cliff/tower/tree that you can climb up/jump down to change floors.
 
