--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -40,7 +40,9 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
-    - Side doors not rendering above MC.
+    - Add 'only' visibility option to layers that hides everything else when selected.
+
+    - Fix bead flow depth by using sprite ordering for the ordered part instead of foreground, use the y value based on where it hits the floor but only draw it start 16px up from that point so it gradually covers while moving behind it.
 
     - Test all scripted events work
         - NPC dialogs
