Flesh out Vanara Village with new design, rooms and a small side quest.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -40,8 +40,10 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
-    - Add hidden small pit entrance and new Vanara Village house with beetles in the basement. The basement can only be accessed by falling in. Has a few chests inside and the NPC will give you 50 Jade if you defeat all the beetles. Eventually change this to a Jade Idol.
-        - Unlock the basement door if the quest is complete for narrative consistency as the NPC will say they locked the basement to keep people safe.
+    - Allow falling on and destroying bushes when falling from the sky
+        - Put nearest fall markers over special bushes for extra chance someone falls from the sky straight into secret pits. Bonus if the secret chime plays as they fall.
+
+    - Add 4 new checks, 3 entrances and 1 pit to randomizer logic
 
     - Randomize pit entrances
 
