--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -40,6 +40,16 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
+    - Smith should say upgrade Chakram instead of weapon
+
+    - Use red snake for flame snake.
+
+    - Clone Explosion doesn't work on Crystal Collector
+
+    - Staff should always hit the full 4 tiles for now.
+
+    - Staff should either not cover the ball goals, or prevent them from being used when covered
+
     - Improve unconnected teleporter graphics to show other world instead of just random light
 
     - Add 'only' visibility option to layers that hides everything else when selected.
