--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -36,6 +36,11 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
+    - Mysteries
+        - Lava appears under floor 2 in the middle of void tree fight
+        - Certain tiles can be frozen in lava on voidFlame
+        - Enemies reset when collecting the staff tower.
+
     - Fix bead flow depth by using sprite ordering for the ordered part instead of foreground, use the y value based on where it hits the floor but only draw it start 16px up from that point so it gradually covers while moving behind it.
 
     - Add crucible to the end of the Grand Temple
