Fix several issues discovered with the final boss. Begin refactoring spirit energy and adding phoenix crown and true sight.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -36,6 +36,39 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
+    - Add placeholder for Jade Palace
+        - Add phoenix crown
+            - Uses a feather from a legender spirit beast that could survive on its own in the material world and once threatened to destroy the world.
+                The War God wants to combine science and Vanara biology to make a new "Void Phoenix" to replicate the old beast.
+                An ancestor of the MC+Hero defeated the original Phoenix
+                The feather is kept in the Jade palace, too dangerous to use but too precious to destroy
+        - Add true sight
+            - Possibly increases tell durations for attacks by 50%?
+            - Alternatively, some tells only render if you have true sight?
+            - Possibly renders (certain) objects from the alternate world at 50%
+                - Might be especially good for monsters that render in both worlds like Staff Tower drones.
+    - Add magic regen cooldown
+        - Max value of 2 seconds initially, reduced to 1 or 0.5s with all equipment
+        - Actions that consume spirit energy will add to the cooldown
+            - 1 second of invisibility = 0.5 seconds cooldown
+            - 1 second of running adds 0.1 seconds of cooldown
+            - Using 10 spirit energy adds 0.1 seconds of cooldown
+        - Spirit energy will not regenerate until the cooldown is finished
+        - Standing still doubles how fast the cooldown expires
+        - Try representing the cooldown as an orange fill from the top of the spirit bar that only covers the left pixel.
+
+    - Add meteor attacks that leave behind rocks to void tree fight
+        - Give to tree + voidFlame
+        - Use smaller versions for enrage mode when voidFlame is active
+
+    - Make sure bow can fire down cliffs in all directions.
+
+    - Spawn up to 2 Lightning Drones in void tree fight
+
+    - Add punching fist attack to void tree rage phase if voidStone is active
+
+    - Restrict laser barrage to if voidStone is active. Change it to be single bursts of 4 that can occur multiple times per phase. Slightly increase delay.
+
     - Mysteries
         - Lava appears under floor 2 in the middle of void tree fight
         - Certain tiles can be frozen in lava on voidFlame
